# Hfractal

./: .gitignore  .gitmodules  .netrwhist  Bindings.hs  FracComp.hs  FracImg.hs  FracSpeedtest.hs  FracState.hs  Hfractal.hs  Mand.hs  MandImg.hs  MandSpeedTest.hs  Mandcomp.hs  Mandstate.hs  README  TODO  haskfrac  hfractal.cabal  vimrc
src/: Bindings.hs  FracColour.hs  FracComp.hs  FracImg.hs  FracSpeedtest.hs  FracState.hs  Hfractal.hs  PointComp.hs  pointcomp.c  pointcomp.h
test/: 05082010
tools/: hfractal-extras.cabal
