name:                hfractal
version:             0.1.0
cabal-version:		 >= 1.2
synopsis:            OpenGL fractal renderer
description:         <Project description>
category:            Graphics
license:             BSD3
author:              Chris Holdsworth
maintainer:          chrisholdsworth@gmail.com
build-type:          Simple

Executable hfractal
    main-is:            Hfractal.hs
    build-depends:      base >3 && <4, array, OpenGL, GLUT 
    ghc-options:          
