name:                hfractal
version:             0.3.0
cabal-version:		 >= 1.2
synopsis:            OpenGL fractal renderer
descripition:	     An OpenGL fractal browser with multicore support. Currently only explores escape iteration fractals. 
					 Has the capability to produce high quality png images.
stability:           Experimental
category:            Graphics
license:             BSD3
copyright:           2009-2009 Chris Holdsworth
author:              Chris Holdsworth <chrisholdsworth@gmail.com>
maintainer:          Chris Holdsworth <chrisholdsworth@gmail.com>
build-type:          Simple
extra-source-files:  README

Executable hfractal
    main-is:            Hfractal.hs
    build-depends:      base >=3 && <5, array, gd < 3000.3.0 && >= 3000.2.0, data-accessor >=0.2 && <=0.3, data-accessor-template >=0.2 && <=0.3, OpenGL >= 2.3 && < 2.4, GLUT
    other-Modules:      FracComp, FracState, FracImg, Bindings
    ghc-options:        -O2 -threaded
