name:                hfractal
version:             0.4.2.2
cabal-version:       >= 1.2
synopsis:            OpenGL fractal renderer
description:         An OpenGL fractal browser with multicore support and the capability to output high quality png images.
stability:           Experimental
category:            Graphics
license:             BSD3
copyright:           2009-2010 Chris Holdsworth
author:              Chris Holdsworth <chrisholdsworth@gmail.com>
maintainer:          Chris Holdsworth <chrisholdsworth@gmail.com>
homepage:            http://github.com/cmh/Hfractal
build-type:          Simple
extra-source-files:  README

Executable hfractal
    main-is:            Hfractal.hs
    build-depends:      base >=3 && <5, array, data-accessor >=0.2, data-accessor-template >=0.2, OpenGL >= 2.3, OpenGLRaw, GLUT >= 2.2.1.0, colour >=2.3.1, containers >= 0.2
    other-Modules:      FracComp, FracColour, FracState, Bindings, PointComp
    ghc-options:        -O2 -threaded -optc-ffast-math
    Hs-Source-Dirs:     src
