name:                hfractal
version:             0.4.2.4
cabal-version:       >= 1.2
synopsis:            OpenGL fractal renderer
description:         An OpenGL fractal browser with multicore support and the capability to output high quality png images.
stability:           Experimental
category:            Graphics
license:             BSD3
copyright:           2009-2011 Chris Holdsworth
author:              Chris Holdsworth <chrisholdsworth@gmail.com>
maintainer:          Chris Holdsworth <chrisholdsworth@gmail.com>
homepage:            http://github.com/cmh/Hfractal
build-type:          Simple
extra-source-files:  README

Executable fracspeedtest
    main-is:            FracSpeedtest.hs
    build-depends:      base >= 4,
                        time,
                        array,
                        data-accessor,
                        data-accessor-template,
                        GLUT
    ghc-options:        -O2 -threaded -rtsopts
    Hs-Source-Dirs:     ../src

Executable fracspeedtestopt
    main-is:            FracSpeedtest.hs
    ghc-options:        -O2 -threaded -fvia-C -rtsopts -fllvm
    Hs-Source-Dirs:     ../src
